--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "concurrently": "3.5.1",
+    "eslint": "^4.19.1",
     "react-scripts": "^1.1.4"
   },
   "dependencies": {
